kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: professors-research
  labels:
    name: professors-research
